# topohedral-viewer

./: .gitattributes  .gitignore  Cargo.toml  README.md  activate.sh  build.rs
assets/: colormap.py  viridis.json
docs/html/: custom-header.html
docs/images/: pitch-yaw.afdesign
examples/: example1.bash  example1.rs  example2.bash  example2.rs  example3.rs
protos/: d2.proto  d3.proto
python/: generate-proto.py  pyproject.toml  startup.py
python/topohedral_viewer_py/: __init__.py  client.py  d2_pb2.py  d2_pb2_grpc.py
src/: app.rs  colormap.rs  common.rs  depth_texture.rs  events.rs  lib.rs
src/core/: mesh.rs  mod.rs  state.rs
src/d2/: camera.rs  mesh.rs  mod.rs  shader2d.wgsl  state.rs  vertex.rs
src/d2/rpc/: common.rs  d2rpc.rs  mod.rs  rpc_client.rs  rpc_server.rs
src/d3/: camera.rs  mesh.rs  mod.rs  shader3d.wgsl  state.rs  vertex.rs
src/d3/rpc/: common.rs  d3rpc.rs  mod.rs  rpc_client.rs  rpc_server.rs
tests/: d2-rpc-test.rs  rpc-test.rs
