[package]
name = "topohedral-viewer"
version = "0.0.0"
edition = "2021"


[dependencies]
bytemuck = {version = "1.16.0", features = ["derive"]}
embed-doc-image = "0.1.4"
nalgebra = {version = "0.32.6", features = ["serde-serialize"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
thiserror = "1.0.61"
wgpu = "0.20.1"
winit = "0.30.2"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
clap = { version = "4.5.7", features = ["derive"] }
tokio-stream = "0.1.15"
log = "0.4.21"
env_logger = "0.11.3"


[build-dependencies]
tonic-build = "0.11"
